# Hazeveil

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh
CITATION.cff/: CITATION.cff
proofs/: .gitignore.ots  Cargo.lock.ots  Cargo.toml.ots  LICENSE.ots  README.md.ots  ai_pattern.rs.ots  audio_engine.rs.ots  build.rs.ots  clipboard_engine.rs.ots  config.rs.ots  context_detector.rs.ots  core_engine.rs.ots  daemon.rs.ots  engine_test.rs.ots  hazeveil.service.ots  install.sh.ots  integration_test.rs.ots  keyboard_engine.rs.ots  lib.rs.ots  main.rs.ots  mouse_engine.rs.ots  pattern_test.rs.ots  scroll_engine.rs.ots  stealth_test.rs.ots  timing_engine.rs.ots  touchpad_engine.rs.ots  utils.rs.ots  window_engine.rs.ots
resources/: hazeveil.service
src/: ai_pattern.rs  audio_engine.rs  clipboard_engine.rs  config.rs  context_detector.rs  core_engine.rs  daemon.rs  keyboard_engine.rs  lib.rs  main.rs  mouse_engine.rs  scroll_engine.rs  timing_engine.rs  touchpad_engine.rs  utils.rs  window_engine.rs
tests/: engine_test.rs  integration_test.rs  pattern_test.rs  stealth_test.rs
