[package]
name = "hazeveil"
version = "0.1.0"
edition = "2021"
authors = ["Anas Malik Jaafar <anas.jaafar.cyber.net.t@proton.me>"]
description = "Linux Behavioral Variation Simulator for Privacy Research"
license = "GPL-3.0-or-later"
repository = "https://github.com/anas-cyber-net/hazeveil"
keywords = ["privacy", "security", "behavioral", "biometrics", "linux"]
categories = ["command-line-utilities"]

[lib]
name = "hazeveil"
path = "src/lib.rs"

[[bin]]
name = "hazeveil"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = { version = "0.8", features = ["small_rng"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
dirs = "5"
nix = { version = "0.27", features = ["signal", "process"] }
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
full-simulation = []
stealth = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true